# aselabs2425-jmacey

./: README.md
DLA/: CMakeLists.txt
DLA/include/: Walker.h
DLA/src/: Walker.cpp  main.cpp
Image/: CMakeLists.txt
Image/include/: Image.h  RGBA.h
Image/src/: Image.cpp  main.cpp
Image/tests/: ImageTests.cpp
Particle/: CMakeLists.txt
Particle/include/: Emitter.h  Particle.h  Vec3.h
Particle/src/: Emitter.cpp  Vec3.cpp  main.cpp
Particle/tests/: ParticleTests.cpp
ParticleNGL/: CMakeLists.txt
ParticleNGL/include/: Emitter.h  NGLScene.h  Particle.h
ParticleNGL/src/: Emitter.cpp  NGLScene.cpp
ParticleQt/: CMakeLists.txt
ParticleQt/include/: Emitter.h  NGLScene.h
ParticleQt/shaders/: ParticleFragment.glsl  ParticleVertex.glsl
ParticleQt/src/: Emitter.cpp  MainWindow.cpp  NGLScene.cpp
ParticleQt/ui/: MainWindow.ui
ParticleSOA/: CMakeLists.txt
ParticleSOA/include/: Emitter.h  Particle.h
ParticleSOA/src/: Emitter.cpp  NGLScene.cpp
RGBA/: CMakeLists.txt
RGBA/src/: main.cpp
RGBA/tests/: RGBATests.cpp
